@@ -9,8 +9,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - Apache::Server->keep_alive_timeout/timeout
 
-- $r->finfo needs to set PL_laststatval
-
 - %ENV not clearing?
 
 - loose @ISA 'DynaLoader' to avoid AutoLoader::AUTOLOAD
